# ProteomicsAllignment

./: .gitignore  CLEANUP_LOG.md  CONTRIBUTING.md  HANDOFF.md  HANDOFF_SANITY_CHECK.md  LICENSE  MASTER.md  PROJECT_REPORT.md  README.md  REPO_AUDIT.md  REPO_LAYOUT_PLAN.md  START_HERE.md  install_r_packages.R  pyproject.toml  requirements-R.txt  requirements.txt
archive/: README.md
data/: .gitignore  PIPELINE_README.md  README.md  check_manifests.py  check_studies_sample_file.py  cleanup_study_disk.sh  gene_matrix_exploration.ipynb  msstatsTMT_qc_plots.R  pdc_manifest_downloader.py  pdc_psm_to_msstatsTMT_protein_matrix.R  pdc_psm_to_protein_matrix.R  run_batch_studies.sh  run_msstats_tmt_gene_matrix.sh  run_pdc_psm_matrix.sh  run_pipeline_per_manifest.sh  run_study_PDC000127.sh  run_study_PDC000153.sh  sample_files_msstats_tmt.csv  test_pdc_download.py
docs/: ANNOTATION_FROM_SAMPLES.md  BENCHMARK.md  BENCHMARK_V2_AND_PRESENTATION.md  CLEAN_CLONE_REPRODUCIBILITY.md  DOC_LINK_CHECK.txt  END_TO_END_TECHNICAL_REPORT.md  HANDOFF_CHECKLIST.md  HOW_TO_RUN_EVERYTHING.md  INFERENCE_BASELINES.md  LAB_ONBOARDING.md  METHODS.md  NAMING_AND_PATHS.md  PREPROCESSING.md  README.md  REPO_AUDIT.md  benchmark_overview.md  diagnostics_master_summary.md  how_to_run_end_to_end.md  matching_metrics_overview.md  meeting_outputs_overview.md  native_domain_inference_overview.md  preprocessing_overview.md  representation_level_inference_overview.md  structure_metrics_overview.md
environment/: README.md
pipeline/: README.md
scripts/: README.md  README_RUNNERS.md  run_all.py  run_methods.py  (+8 more)
(+223 files in other folders)
